--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,7 @@
     <title>Not Found - AvR</title>
 </head>
 <body>
-    Ops, I am sorry. I didn't create it yet. 
+    Ops, I am sorry. I didn't create it yet.
+    <div id="root"></div> 
 </body>
 </html>
