Custom 404 not found page updated.

--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found - AvR</title>
+    <title>Not Found - AvR | asadvriya</title>
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="Md. Asad Chowdhary - A personal blog of Md. Asad Chowdhary | asadvriya | AvR" />
+    <link rel="stylesheet" href="404.css">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/asadvriya192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
+
 <body>
-    Ops, I am sorry. I didn't create it yet.
-    <div id="root"></div> 
+    <main>
+        <h2>I can't find.</h2>
+        <pre>
+The page you're looking for in my dream, 
+The way you search, I always perish. 
+To keep my day, beautiful and light,
+To shine your day too bright and white. 
+    </pre>
+
+
+        <pre>
+    I am still searching, the world you are looking. 
+    Through the sky, through the sea. 
+    I am still searching and waiting to be,
+    To rise upon the sky, beneath the sea. 
+        </pre>
+        <details>
+            <summary>
+                Sorry! I've been lost!!
+            </summary>
+            <p>
+            Searching for the page, you are looking!!!</p>
+        </details>
+        
+    </main>
 </body>
+
 </html>
