--- a/public/404.html
+++ b/public/404.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    
     <main>
         <h2>I can't find.</h2>
         <pre>
@@ -40,6 +41,9 @@ To shine your day too bright and white.
         </details>
         
     </main>
+    <nav>
+        <a href="/">Let's go home</a>
+    </nav>
 </body>
 
 </html>
